[package]
name = "ppca_rs"
version = "0.2.0"
edition = "2021"

[package.metadata.maturin]
python-source = "python"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ppca_rs"
crate-type = ["staticlib"]

[dependencies]
approx = "0.5.1"
bit-vec = "0.6.3"
nalgebra = { version = "0.31.2", features = ["serde-serialize"] }
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.5.3"
pyo3 = { version = "0.17.1", features = ["extension-module"] }
numpy = { git = "https://github.com/PyO3/rust-numpy", features = ["nalgebra"] }
ndarray = "0.15.6"
serde = "1.0.147"
serde_derive = "1.0.147"
bincode = "1.3.3"
