[package]
name = "ppca_rs"
version = "0.4.0"
edition = "2021"
publish = false

[package.metadata.maturin]
python-source = "python"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ppca_rs"
crate-type = ["staticlib"]

[dependencies]
ppca = { path = "./ppca" }
pyo3 = { version = "0.17.1", features = ["extension-module"] }
numpy = { git = "https://github.com/PyO3/rust-numpy", features = ["nalgebra"] }
bincode = "1.3.3"
rayon = "1.6.1"
nalgebra = "0.31.4"
rand = "0.8.5"
rand_distr = "0.4.3"
