[package]
name = "ppca_rs"
version = "0.5.1"
edition = "2021"
publish = false

[package.metadata.maturin]
python-source = "python"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ppca_rs"
crate-type = ["staticlib"]

[dependencies]
ppca = { path = "./ppca" }
pyo3 = { version = "0.18.3", features = ["extension-module"] }
numpy = { version = "0.18.0", features = ["nalgebra"] }
bincode = "1.3.3"
rayon = "1.7.0"
nalgebra = "0.32.2"
rand = "0.8.5"
rand_distr = "0.4.3"
