[package]
name = "ppca"
version = "0.5.1"
edition = "2021"
authors = ["Pedro Bittencourt Arruda <pedrobittencourt3@gmail.com>"]
description = "Rust implementation of the Probabilistic Principal Component Analysis model"
readme = "./readme.md"
homepage = "https://github.com/findHotel/ppca_rs"
repository = "https://github.com/findHotel/ppca_rs"
license-file = "./license"
keywords = [
    "data-science",
    "machine-learning",
    "pca",
    "dimension-reduction",
    "missing-values",
]
categories = ["algorithms", "data-structures", "mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

approx = "0.5.1"
bit-vec = { version = "0.6.3", features = ["serde"] }
nalgebra = { version = "0.32.2", features = ["serde-serialize"] }
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.7.0"
ndarray = "0.15.6"
serde = { version = "1.0.160", features = ["rc"] }
serde_derive = "1.0.160"
ordered-float = "3.6.0"
